Put some stuff in the body of the page.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <body bgcolor="#000000">
 <head>
-	<title>Worm-guardians of the Galaxy</title>
+	<title>Worm-guardians of the Galaxy!</title>
 	<style type = "text/css">
 	</style>
 	<head>
